# OSInterface

./: .clang-tidy  CMakeLists.txt  README.md
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: CI.yml
Source/: CMakeLists.txt  OSInterface_Log.cpp
Source/include/: OSInterface.h  OSInterface_BinarySemaphore.h  OSInterface_Log.h  OSInterface_Mutex.h  OSInterface_Queue.h  OSInterface_Timer.h  OSInterface_UntypedQueue.h
include/: CMakeLists.txt  ESP_IDF_OSInterface.h  OSInterface.h  OSShim.h
lintHelper/: CMakeLists.txt  espLintHelper.cpp  lintHelper.cpp
